Creation Center images w/whitespace, testing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,9 @@ header {
 .portfolio__item {
     background: var(--clr-light);
     overflow: hidden;
+    width: 100%;
+    max-height: 400px;
+    object-fit: contain;
     
 }
 
@@ -447,3 +450,16 @@ header {
     padding: .5em;
 }
 
+/*Individual portfolio items*/ 
+.portfolio__item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+/*Change width depending on text*/
+.portfolio__item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
